Adds prompts for labs

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -28,6 +28,9 @@
           </div>
         </div>
       </div>
+
+      Display a list of this user's favorites (e.g., Burger at Au Cheval)
+
     </div>
   </div>
 </div>
