--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -34,6 +34,9 @@
           </div>
         </div>
       </div>
+
+      Display a list of dishes that have been marked as favorites at this venue
+
     </div>
   </div>
 </div>
