--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,23 +16,36 @@
             </dl>
             <div class="btn-group btn-group-justified">
               <%= link_to users_url, :class => "btn btn-primary" do %>
-                <i class="fa fa-chevron-left"></i>
+              <i class="fa fa-chevron-left"></i>
               <% end %>
               <%= link_to edit_user_url(@user.id), :class => "btn btn-warning" do %>
-                <i class="fa fa-edit"></i>
+              <i class="fa fa-edit"></i>
               <% end %>
               <%= link_to user_url(@user.id), :method => "delete", :data => { :confirm => "Do you really want to delete this user?" }, :class => "btn btn-danger" do %>
-                <i class="fa fa-trash-o"></i>
+              <i class="fa fa-trash-o"></i>
               <% end %>
             </div>
           </div>
         </div>
       </div>
 
-      Display a list of this user's favorites (e.g., Burger at Au Cheval)
-
+      <ul class="list-group">
+        <li class="list-group-item disabled">Favorites</li>
+        <% @user.favorites.each do |favorite| %>
+        <li class="list-group-item">
+          <%= link_to favorite.dish.name, dish_url(favorite.dish.id) %>
+          at
+          <%= link_to favorite.venue.name, venue_url(favorite.venue.id) %>
+        </li>
+        <% end %>
+      </ul>
     </div>
   </div>
 </div>
 
 <!-- End responsive panel example -->
+
+
+
+
+
