--- a/app/views/neighborhoods/show.html.erb
+++ b/app/views/neighborhoods/show.html.erb
@@ -31,8 +31,20 @@
           </div>
         </div>
       </div>
+
+      <ul class="list-group">
+      <% @neighborhood.venues.each do |venue| %>
+        <li class="list-group-item"><%= venue.name %></li>
+      <% end %>
+      </ul>
+
     </div>
   </div>
 </div>
 
 <!-- End responsive panel example -->
+
+
+
+
+
