--- a/app/views/dishes/show.html.erb
+++ b/app/views/dishes/show.html.erb
@@ -30,6 +30,52 @@
             </div>
           </div>
         </div>
+
+        <%= form_tag favorites_url, :method => "post", :class => "form-horizontal" do %>
+          <!-- Label and input for user_id -->
+          <div class="form-group">
+            <label for="user_id" class="col-sm-2 control-label">
+              User
+            </label>
+            <div class="col-sm-10">
+              <%= select_tag :user_id, options_from_collection_for_select(User.order(:username), :id, :username), :class => "form-control" %>
+            </div>
+          </div>
+
+          <!-- Label and input for dish_id -->
+
+          <input type="hidden" name="dish_id" value="<%= @dish.id %>">
+
+
+          <!-- Label and input for venue_id -->
+          <div class="form-group">
+            <label for="venue_id" class="col-sm-2 control-label">
+              Venue
+            </label>
+            <div class="col-sm-10">
+              <%= select_tag :venue_id, options_from_collection_for_select(Venue.order(:name), :id, :name), :class => "form-control" %>
+            </div>
+          </div>
+
+          <!-- Label and input for notes -->
+          <div class="form-group">
+            <label for="notes" class="col-sm-2 control-label">
+              Notes
+            </label>
+            <div class="col-sm-10">
+              <textarea id="notes" name="notes" placeholder="Notes" class="form-control" rows="3"></textarea>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+              <input type="submit" value="Create Favorite" class="btn btn-success">
+              or
+              <a href="/favorites">Cancel</a>
+            </div>
+          </div>
+        <% end %>
+
       </div>
     </div>
   </div>
